###################
Nagios Change Log
###################


2.0rc2 - ??/??/2006
-------------------
* Fix for initialization of embedded Perl interpreter
* Minor documentation updates



2.0rc1 - 12/27/2005
-------------------
* Event broker modifications:
	- Minor change to log timestamps
	- Changes to notification, check, event handler, and system command callbacks
	- Addition of acknowledgement callbacks
	- Addition of state change callbacks
* Minor bug fix to statuswml CGI
* Minor spec file updates
* Minor include file fix to remove duplicate _REENTRANT definitions affecting embedded Perl
* Bug fix in template resolution of contactgroups variable in contact definitions
* Fixed bug with comments not expiring (for some reason this was not previously implemented!)
* Minor embedded Perl changes
* Fixed bug with non-registered objects in wildcard/regex templates
* Added configure script option to disable use of nanosleep() in event queue
* Improvements to circular path/dependency checks to prevent segfaults
* Minor documentation updates



2.0b6 - 11/30/2005
------------------
* Changed license to specifically state GPL version 2
* Minor fixes to sample nagios.cfg config file
* Fix for non-US date formats in command CGI
* Spec file updates
* Include file modifications for C++ event broker modules
* Minor event broker changes (addition of timed event "sleep" data)
* Added some sanity checks during write of status data for full partitions
* Sample web server config file changes
* Doc updates



2.0b5 - 11/14/2005
------------------
* Typo fix in availability CGI
* Minor changes to sample config files
* Fixed order of include files in config.h for clean compile on OpenBSD 3.6
* Minor fixes in availability and trends CGIs for assumed states during program downtime
* Fixed bug with initial scheduling of active service checks in configs with a large number of passive-only checks